--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,8 +3,9 @@
     <parent>
         <artifactId>sfg-pet-clinic</artifactId>
         <groupId>rw.aos</groupId>
-        <version>0.0.1</version>
+        <version>0.0.5-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-data</artifactId>
@@ -77,9 +78,6 @@
                     <goals>
                         <goal>repackage</goal>
                     </goals>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
                 </execution>
             </executions>
             </plugin>
