--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+    <groupId>rw.aos</groupId>
+    <artifactId>sfg-pet-clinic</artifactId>
+    <version>0.0.5-SNAPSHOT</version>
+
     <modules>
         <module>pet-clinic-data</module>
         <module>pet-clinic-web</module>
     </modules>
+
+    <packaging>pom</packaging>
 
     <name>sfg-pet-clinic</name>
     <description>SFG Pet Clinic Project</description>
@@ -16,9 +21,7 @@
         <version>2.3.1.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
-    <groupId>rw.aos</groupId>
-    <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1</version>
+
 
     <properties>
         <java.version>1.8</java.version>
