--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -13,7 +13,7 @@
         <dependency>
             <artifactId>pet-clinic-data</artifactId>
             <groupId>rw.aos</groupId>
-            <version>0.0.5-SNAPSHOT</version>
+            <version>0.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
