--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -46,6 +49,6 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/IgnaceHakizimana/sfg-pet-clinic.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>sfg-pet-clinic-0.0.5</tag>
   </scm>
 </project>
