--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
     <build>
