--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
     <properties>
         <java.version>1.8</java.version>
         <maven.javadoc.skip>true</maven.javadoc.skip>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <build>
