--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -78,11 +78,11 @@
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
+                        <version>1.3.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
-            <!--<plugin>
+         <!--   <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             <executions>
