--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -43,10 +43,10 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-       <!-- <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>-->
+        <!-- <dependency>
+             <groupId>org.projectlombok</groupId>
+             <artifactId>lombok</artifactId>
+         </dependency>-->
 
         <!-- webjars -->
         <dependency>
@@ -150,7 +150,7 @@
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
+                        <version>1.3.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
